-fix timer picker for 8 hour option -change text in its XML layout -linked studentActivity to 8hourActivity check option

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".secondActivity" />
         <activity android:name=".studentActivity" />
         <activity android:name=".professionalActivity" />
+        <activity android:name=".eightHourActivity" />
         <activity android:name=".entrepreneurActivity"></activity>
     </application>
 
