Study Hours layout and JavaClass added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".secondActivity" />
+        <activity android:name=".occupationActivity" />
         <activity android:name=".studentActivity" />
         <activity android:name=".professionalActivity" />
         <activity android:name=".eightHourActivity" />
