Good progress on activity_courses. Number of courses from activity_student is properly passed to activity_courses. Able to dynamically generate EditText. Need to add loop for number of EditTexts generated is equal to number of courses. Need to learn how to get string and keep info. Need to program buttons on activity_courses.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".coursesActivity" />
         <activity android:name=".occupationActivity" />
         <activity android:name=".studentActivity" />
         <activity android:name=".professionalActivity" />
         <activity android:name=".eightHourActivity" />
         <activity android:name=".quickSetupPopupActivity" />
         <activity android:name=".quickSetupActivity" />
-        <activity android:name=".entrepreneurActivity"></activity>
+        <activity android:name=".entrepreneurActivity" />
     </application>
 
 </manifest>
